namespace Commons
{
    public static class InGameConst
    {
        public static float MoveSpeed = 5f;
    }
}