namespace Commons
{
    public static class InGameEnum
    {
        /// <summary>
        /// 状態
        /// </summary>
        public enum State
        {
            None=-1,
            Ahead,
            Left,
            Right,
            Back,
            Stop,
        }
    }
}