namespace Player
{
    public interface IPushable
    {
        public void Push();
    }
}