using UnityEngine;

namespace RipCurrent
{
    public class RipCurrentModel : MonoBehaviour
    {
      
    }
}