using UnityEngine;

namespace RipCurrent
{
    public class RipCurrentView : MonoBehaviour
    {

    }
}